security: FASE 5 - implementar proteção XSS e sanitização de inputs
PROTEÇÃO COMPLETA CONTRA XSS:

1. SANITIZATION SERVICE (src/services/sanitization.service.ts):
   - DOMPurify integrado para sanitização de HTML
   - 3 níveis de sanitização:
     * text: Remove TODAS as tags HTML
     * html: Permite apenas formatação básica segura
     * markdown: Permite rich text seguro
   - Validação de inputs:
     * validateEmail() - RFC compliant
     * validateName() - apenas caracteres válidos
     * validateUsername() - alfanumérico + _ -
     * validatePassword() - força da senha
     * validateUrl() - apenas http/https
   - Escape de caracteres especiais:
     * escapeHtml() - < > & " '
     * escapeJavaScript() - para strings JS
     * escapeSql() - básico (backend deve usar prepared statements)
   - Detecção de ataques:
     * detectXssAttempt() - script, onclick, iframe, etc
     * detectSqlInjection() - union, drop, --, etc
     * detectPathTraversal() - ../
     * logSecurityIncident() - logging de tentativas

2. REACT HOOKS (src/hooks/useSanitization.ts):
   - useSanitization() - hook principal
   - useFormValidation() - validação de formulários
   - Memoizado para performance

3. COMPONENTES REACT (src/components/common/SafeHtml.tsx):
   - <SafeHtml> - renderiza HTML sanitizado
   - <SafeLink> - links externos seguros
   - <SafeInput> - input com sanitização em tempo real
   - Detecção automática de XSS

4. INTEGRAÇÃO COM AUTH SERVICE:
   - Registro de usuários agora sanitiza todos os inputs
   - sanitizeUserRegistration() completo
   - Validação de:
     * Nome (2-50 chars, apenas letras)
     * Email (RFC compliant)
     * Universidade (opcional, max 100 chars)
     * Ano de graduação (1900-futuro+10)

5. SANITIZAÇÃO DE PROMPTS/CONTEÚDO:
   - sanitizePromptContent()
   - Título: 3-200 chars
   - Conteúdo: até 50k chars (markdown)
   - Tags: máx 10, 20 chars cada

REGEX PATTERNS IMPLEMENTADOS:
- EMAIL: validação completa RFC
- NAME: letras + espaços + hífen + ap

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "driver.js": "^1.4.0",
     "gapi-script": "^1.2.0",
     "jsonwebtoken": "^9.0.3",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/dompurify": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.16",
     "@types/pathfinding": "^0.1.0",
